@@ -1,34 +1,46 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.7.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'java'
+    id 'org.springframework.boot' version '2.7.10' // Updated to a newer Spring Boot version
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE' // Update dependency management plugin
+    id 'java'
 }
 
 group = 'com.jhooq'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+
+// Set source and target compatibility to Java 17
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-	compile.exclude module: "spring-boot-starter-tomcat"
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+    compile.exclude module: "spring-boot-starter-tomcat"
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-jetty'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jetty'
+    
+    // Update Lombok to a compatible version for Java 17
+    compileOnly 'org.projectlombok:lombok:1.18.24' 
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test' {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
+
+// Ensure JVM args allow access to internal classes when running with Java 17
+tasks.withType(JavaCompile) {
+    options.forkOptions.jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
+}
+
